--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Todo</title>
-<link rel="stylesheet"
-	href="css/bootstrap.min.css"
+<link rel="stylesheet" href="css/bootstrap.min.css"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
 </head>
@@ -16,9 +15,17 @@
 			</span>
 		</nav>
 
-		<div class="text-center mt-3">
-			<a class="btn btn-primary" href="/api/users" target="_blank">Get All Users</a>
-			 <a class="btn btn-primary ml-2" href="/api/todo" target="_blank">Get All Todos</a>
+		<div class="container d-flex justify-content-around">
+			<div class="row">
+				<div class="col-sm-6 mt-3 pt-3">
+					<a class="btn btn-primary" href="/api/users" target="_blank">Get
+						All Users</a>
+				</div>
+				<div class="col-sm-6 mt-3 pt-3">
+					<a class="btn btn-success" href="/api/todo"
+						target="_blank">Get All Todos</a>
+				</div>
+			</div>
 
 		</div>
 	</div>
